--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "scmu-aws",
   "version": "1.0.0",
   "description": "scmu project backend server",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node index.ts"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/filipeluna/SCMU-AWS/issues"
   },
-  "homepage": "https://github.com/filipeluna/SCMU-AWS#readme"
+  "homepage": "https://github.com/filipeluna/SCMU-AWS#readme",
+  "dependencies": {
+    "@types/node": "^11.13.9",
+    "bluebird": "^3.5.4",
+    "boom": "^7.3.0",
+    "express": "^4.16.4",
+    "pg-promise": "^8.6.5",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.5"
+  }
 }
