--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
   "homepage": "https://github.com/filipeluna/SCMU-AWS#readme",
   "dependencies": {
     "@types/node": "^11.13.9",
+    "base64-js": "^1.3.0",
     "bluebird": "^3.5.4",
+    "body-parser": "^1.19.0",
     "boom": "^7.3.0",
     "express": "^4.16.4",
+    "js-base64": "^2.5.1",
+    "moment": "^2.24.0",
     "pg-promise": "^8.6.5",
     "ts-node": "^8.1.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "uuid": "^3.3.2"
   }
 }
