--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/filipeluna/SCMU-AWS#readme",
   "dependencies": {
+    "@hapi/joi": "^15.0.1",
     "@types/node": "^11.13.9",
     "bluebird": "^3.5.4",
     "body-parser": "^1.19.0",
